@@ -413,3 +413,4 @@
 - Added CRYPTOIRCd ('r') to version string
 - Added some more crypto stuff
     - /crypto <algoritm> <keyfile laying in keys/> <parameters>
+- Fixed a ->passwd bug caused by codemastr..
